--- a/www/wp-content/themes/front/package.json
+++ b/www/wp-content/themes/front/package.json
@@ -15,32 +15,31 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"@types/three": "0.144.0",
-		"browser-sync": "2.29.1",
-		"esbuild-plugin-glsl": "1.1.0",
-		"gulp": "4.0.2",
+		"browser-sync": "3.0.4",
+		"esbuild-plugin-glsl": "1.4.1",
+		"gulp": "5.0.1",
 		"gulp-bump": "3.2.0",
 		"gulp-concat": "2.6.1",
-		"gulp-esbuild": "0.10.5",
+		"gulp-esbuild": "0.14.1",
 		"gulp-livereload": "4.0.2",
-		"gulp-postcss": "9.0.1",
-		"gulp-prettier": "4.0.0",
-		"gulp-rename": "2.0.0",
-		"gulp-sass": "5.0.0",
+		"gulp-postcss": "10.0.0",
+		"gulp-prettier": "6.0.0",
+		"gulp-rename": "2.1.0",
+		"gulp-sass": "6.0.1",
 		"gulp-sass-glob": "1.1.0",
 		"gulp-sourcemaps": "3.0.0",
-		"postcss": "8.4.5",
-		"postcss-modules": "6.0.0",
-		"postcss-sort-media-queries": "4.2.1",
-		"sass": "1.70.0",
-		"@zackad/prettier-plugin-twig": "0.11.1"
+		"gulp-insert": "0.5.0",
+		"md5": "2.3.0",
+		"postcss": "8.5.6",
+		"postcss-modules": "6.0.1",
+		"postcss-sort-media-queries": "5.2.0",
+		"sass": "1.97.3",
+		"@zackad/prettier-plugin-twig": "0.16.3"
 	},
 	"dependencies": {
-		"@barba/core": "2.9.7",
+		"@barba/core": "2.10.3",
 		"@vue-reactivity/watch": "0.2.0",
-		"@vue/reactivity": "3.2.39",
-		"gsap": "3.11.3",
-		"gulp-insert": "0.5.0",
-		"md5": "2.3.0"
+		"@vue/reactivity": "3.5.27",
+		"gsap": "3.14.2"
 	}
 }
