--- a/www/wp-content/themes/front/tsconfig.json
+++ b/www/wp-content/themes/front/tsconfig.json
@@ -1,10 +1,14 @@
 //
 {
 	"compilerOptions": {
-		"baseUrl": "./",
-		"target": "es5",
+		"paths": {
+			"*": ["./node_modules/*", "./src/*", "./*"]
+		},
+		"target": "es2020",
 		"resolveJsonModule": true,
 		"esModuleInterop": true,
-		"lib": ["es2019", "dom", "scripthost"]
+		"lib": ["es2019", "dom", "scripthost"],
+		"noImplicitAny": false,
+		"noImplicitThis": false
 	}
 }
