Update publish.yml to include new theme path

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,7 @@ on:
     branches:
       - master
     paths:
-      - 'www/wp-content/themes/**'
+      - 'www/wp-content/themes/front/bundles/**'
 
 jobs:
   publish-themes:
