--- a/www/wp-content/themes/front/package.json
+++ b/www/wp-content/themes/front/package.json
@@ -15,6 +15,7 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@zackad/prettier-plugin-twig": "0.16.3",
 		"browser-sync": "3.0.4",
 		"esbuild-plugin-glsl": "1.4.1",
 		"gulp": "5.0.1",
@@ -30,8 +31,7 @@
 		"postcss": "8.5.6",
 		"postcss-modules": "6.0.1",
 		"postcss-sort-media-queries": "5.2.0",
-		"sass": "1.97.3",
-		"@zackad/prettier-plugin-twig": "0.16.3"
+		"sass": "1.97.3"
 	},
 	"dependencies": {
 		"@barba/core": "2.10.3",
